--- a/public/css/customColors.css
+++ b/public/css/customColors.css
@@ -454,16 +454,16 @@
 [data-theme=emerald] {
     --gradient: rgba(16, 185, 129, .2);
 	--50: rgba(236, 253, 245);
-	--50-0: rgba(236, 253, 245, .0);
-	--50-10: rgba(236, 253, 245, .10);
-	--50-20: rgba(236, 253, 245, .20);
-	--50-30: rgba(236, 253, 245, .30);
-	--50-40: rgba(236, 253, 245, .40);
-	--50-50: rgba(236, 253, 245, .50);
-	--50-60: rgba(236, 253, 245, .60);
-	--50-70: rgba(236, 253, 245, .70);
-	--50-80: rgba(236, 253, 245, .80);
-	--50-90: rgba(236, 253, 245, .90);
+	--50-0: rgb(9, 228, 19, .0);
+	--50-10: rgb(9, 228, 19, .10);
+	--50-20: rgb(9, 228, 19, .20);
+	--50-30: rgb(9, 228, 19, .30);
+	--50-40: rgb(9, 228, 19, .40);
+	--50-50: rgb(9, 228, 19, .50);
+	--50-60: rgb(9, 228, 19, .60);
+	--50-70: rgb(9, 228, 19, .70);
+	--50-80: rgb(9, 228, 19, .80);
+	--50-90: rgb(9, 228, 19, .90);
 	--100: rgba(209, 250, 229);
 	--100-0: rgba(209, 250, 229, .0);
 	--100-10: rgba(209, 250, 229, .10);
@@ -567,6 +567,6 @@
 .bg-500 { background: var(--500); }
 .text-500-violet { color: rgba(139, 92, 246); }
 .text-500-blue { color: rgba(59, 130, 246); }
-.text-500-emerald { color: rgb(16, 185, 129); }
+.text-500-emerald { color: rgb(9, 228, 19); }
 .text-500-rose { color: rgb(239, 68, 68); }
 .text-500-amber { color: rgb(245, 158, 11); }
