--- a/public/css/customColors.css
+++ b/public/css/customColors.css
@@ -453,7 +453,7 @@
 }
 [data-theme=emerald] {
     --gradient: rgba(16, 185, 129, .2);
-	--50: rgba(236, 253, 245);
+	--50: rgba(9, 228, 19, .0);
 	--50-0: rgb(9, 228, 19, .0);
 	--50-10: rgb(9, 228, 19, .10);
 	--50-20: rgb(9, 228, 19, .20);
@@ -464,6 +464,105 @@
 	--50-70: rgb(9, 228, 19, .70);
 	--50-80: rgb(9, 228, 19, .80);
 	--50-90: rgb(9, 228, 19, .90);
+		--100: rgba(9, 228, 19);
+	--100-0: rgba(9, 228, 19, .0);
+	--100-10: rgba(9, 228, 19, .0);
+	--100-20: rgba(9, 228, 19, .0);
+	--100-30: rgba(9, 228, 19, .0);
+	--100-40: rgba(9, 228, 19, .0);
+	--100-50: rgba(9, 228, 19, .0);
+	--100-60: rgba(9, 228, 19, .0);
+	--100-70: rgba(9, 228, 19, .0);
+	--100-80: rgba(9, 228, 19, .0);
+	--100-90: rgba(9, 228, 19, .0);
+	--200: rgba(9, 228, 19);
+	--200-0: rgba(9, 228, 19, .0);
+	--200-10: rgba(9, 228, 19, .0);
+	--200-20: rgba(9, 228, 19, .0);
+	--200-30: rgba(9, 228, 19, .0);
+	--200-40: rgba(9, 228, 19, .0);
+	--200-50: rgba(9, 228, 19, .0);
+	--200-60: rgba(9, 228, 19, .0);
+	--200-70: rgba(9, 228, 19, .0);
+	--200-80: rgba(9, 228, 19, .0);
+	--200-90: rgba(9, 228, 19, .0);
+	--300: rgba(9, 228, 19);
+	--300-0: rgba(9, 228, 19, .0);
+	--300-10: rgba(9, 228, 19, .0);
+	--300-20: rgba(9, 228, 19, .0);
+	--300-30: rgba(9, 228, 19, .0);
+	--300-40: rgba(9, 228, 19, .0);
+	--300-50: rgba(9, 228, 19, .0);
+	--300-60: rgba(9, 228, 19, .0);
+	--300-70: rgba(9, 228, 19, .0);
+	--300-80: rgba(9, 228, 19, .0);
+	--300-90: rgba(9, 228, 19, .0);
+	--400: rgba(9, 228, 19);
+	--400-0: rgba(9, 228, 19, .0);
+	--400-10: rgba(9, 228, 19, .0);
+	--400-20: rgba(9, 228, 19, .0);
+	--400-30: rgba(9, 228, 19, .0);
+	--400-40: rgba(9, 228, 19, .0);
+	--400-50: rgba(9, 228, 19, .0);
+	--400-60: rgba(9, 228, 19, .0);
+	--400-70: rgba(9, 228, 19, .0);
+	--400-80: rgba(9, 228, 19, .0);
+	--400-90: rgba(9, 228, 19, .0);
+	--500: rgba(9, 228, 19);
+	--500-0: rgba(16, 185, 129, .0);
+	--500-10: rgba(9, 228, 19, .0);
+	--500-20: rgba(9, 228, 19, .0);
+	--500-30: rgba(9, 228, 19, .0);
+	--500-40: rgba(9, 228, 19, .0);
+	--500-50: rgba(9, 228, 19, .0);
+	--500-60: rgba(9, 228, 19, .0);
+	--500-70: rgba(9, 228, 19, .0);
+	--500-80: rgba(9, 228, 19, .0);
+	--500-90: rgba(9, 228, 19, .0);
+	--600: rgba(9, 228, 19);
+	--600-0: rgba(9, 228, 19, .0);
+	--600-10: rgba(9, 228, 19, .0);
+	--600-20: rgba(9, 228, 19, .0);
+	--600-30: rgba(9, 228, 19, .0);
+	--600-40: rgba(9, 228, 19, .0);
+	--600-50: rgba(9, 228, 19, .0);
+	--600-60: rgba(9, 228, 19, .0);
+	--600-70: rgba(9, 228, 19, .0);
+	--600-80: rgba(9, 228, 19, .0);
+	--600-90: rgba(9, 228, 19, .0);
+	--700: rgba(9, 228, 19);
+	--700-0: rgba(9, 228, 19, .0);
+	--700-10: rgba(9, 228, 19, .0);
+	--700-20: rgba(9, 228, 19, .0);
+	--700-30: rgba(9, 228, 19, .0);
+	--700-40: rgba(9, 228, 19, .0);
+	--700-50: rgba(9, 228, 19, .0);
+	--700-60: rgba(9, 228, 19, .0);
+	--700-70: rgba(9, 228, 19, .0);
+	--700-80: rgba(9, 228, 19, .0);
+	--700-90: rgba(9, 228, 19, .0);
+	--800: rgba(9, 228, 19);
+	--800-0: rgba(9, 228, 19, .0);
+	--800-10: rgba(9, 228, 19, .0);
+	--800-20: rgba(9, 228, 19, .0);
+	--800-30: rgba(9, 228, 19, .0);
+	--800-40: rgba(9, 228, 19, .0);
+	--800-50: rgba(9, 228, 19, .0);
+	--800-60: rgba(9, 228, 19, .0);
+	--800-70: rgba(9, 228, 19, .0);
+	--800-80: rgba(9, 228, 19, .0);
+	--800-90: rgba(9, 228, 19, .0);
+	--900: rgba(9, 228, 19);
+	--900-0: rgba(9, 228, 19, .0);
+	--900-10: rgba(9, 228, 19, .0);
+	--900-20: rgba(9, 228, 19, .0);
+	--900-30: rgba(9, 228, 19, .0);
+	--900-40: rgba(9, 228, 19, .0);
+	--900-50: rgba(9, 228, 19, .0);
+	--900-60: rgba(9, 228, 19, .0);
+	--900-70: rgba(9, 228, 19, .0);
+	--900-80: rgba(9, 228, 19, .0);
+	--900-90: rgba(9, 228, 19, .0);
 }
 .bg-500 { background: var(--500); }
 .text-500-violet { color: rgba(139, 92, 246); }
